--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "@material-ui/core": "^4.2.0",
     "@material-ui/icons": "^4.2.1",
     "express": "^4.17.1",
+    "mobx": "^5.13.0",
+    "mobx-persist": "^0.4.1",
+    "mobx-react": "^6.1.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
